# Unified-Panel

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  unified-panel.service
.github/: copilot-instructions.md
automation/ansible/inventory/: hosts.yml
automation/ansible/playbooks/: setup-server.yml
automation/n8n/: README.md
automation/n8n/workflows/: server-provisioning.json
automation/scripts/bash/: backup-database.sh  server-health-check.sh
automation/scripts/python/: monitor_metrics.py  requirements.txt
backend/: .env.example  Cargo.toml
backend/migrations/: 001_init.sql  002_add_vps.sql
backend/src/: config.rs  database.rs  main.rs
backend/src/api/: auth.rs  dashboard.rs  mod.rs  servers.rs  users.rs  vps.rs
backend/src/handlers/: pages.rs
backend/src/middleware/: mod.rs
backend/src/models/: auth.rs  mod.rs  server.rs  user.rs  vps.rs
backend/src/services/: auth_service.rs  mod.rs  server_service.rs  user_service.rs  vps_service.rs
backend/src/utils/: errors.rs  jwt.rs  mod.rs  password.rs
backend/static/css/: .gitkeep
backend/static/images/: .gitkeep
backend/static/js/: .gitkeep  custom.js
backend/templates/: base.html  dashboard.html  index.html  login.html  monitoring.html  register.html  servers.html  settings.html  users.html  vps.html
backend/templates/components/: hosting_overview.html  sidebar.html  topbar.html
docs/: DEPLOYMENT.md  SYSTEMD.md
frontend/: README.md  package.json  tailwind.config.js
frontend/src/: custom.js  styles.css
